[gd_scene load_steps=9 format=3 uid="uid://bskrvgkv14vhy"]

[ext_resource type="Script" path="res://scenes/ui/end_screen.gd" id="1_qpfq4"]
[ext_resource type="AudioStream" uid="uid://iwk3b8853onw" path="res://assests/audio/jingles_victory.ogg" id="2_aatfw"]
[ext_resource type="PackedScene" uid="uid://csg5s4g6eg0ob" path="res://scenes/ui/sound_button.tscn" id="2_k4lip"]
[ext_resource type="AudioStream" uid="uid://c18y1rtx64kfd" path="res://assests/audio/jingles_defeat.ogg" id="3_j0ii7"]

[sub_resource type="Animation" id="Animation_gc4jo"]
resource_name = "In"
length = 0.15
step = 0.05
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("ColorRect:modulate")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.15),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}
tracks/1/type = "method"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"play_jingle"
}]
}

[sub_resource type="Animation" id="Animation_4so3v"]
resource_name = "Out"
length = 0.15
step = 0.05
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("ColorRect:modulate")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.15),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}

[sub_resource type="Animation" id="Animation_je1co"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("ColorRect:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_iowc8"]
_data = {
"In": SubResource("Animation_gc4jo"),
"Out": SubResource("Animation_4so3v"),
"RESET": SubResource("Animation_je1co")
}

[node name="EndScreen" type="CanvasLayer"]
process_mode = 3
script = ExtResource("1_qpfq4")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
autoplay = "In"
libraries = {
"": SubResource("AnimationLibrary_iowc8")
}

[node name="VictoryStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("2_aatfw")
bus = &"sfx"

[node name="DefeatStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("3_j0ii7")
bus = &"sfx"

[node name="ColorRect" type="ColorRect" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.607843, 0.298039, 0.639216, 0.352941)

[node name="MarginContainer" type="MarginContainer" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
pivot_offset = Vector2(320, 180)

[node name="PanelContainer" type="PanelContainer" parent="MarginContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/PanelContainer"]
custom_minimum_size = Vector2(180, 0)
layout_mode = 2
theme_override_constants/margin_left = 8
theme_override_constants/margin_top = 8
theme_override_constants/margin_right = 8
theme_override_constants/margin_bottom = 8

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/PanelContainer/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 16

[node name="TitleLabel" type="Label" parent="MarginContainer/PanelContainer/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_type_variation = &"BlueOutlineLabel"
theme_override_font_sizes/font_size = 48
text = "Victory"
horizontal_alignment = 1

[node name="DescriptionLabel" type="Label" parent="MarginContainer/PanelContainer/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_type_variation = &"BlueOutlineLabel"
theme_override_font_sizes/font_size = 16
text = "You won!"
horizontal_alignment = 1

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 4

[node name="ContinueButton" parent="MarginContainer/PanelContainer/MarginContainer/VBoxContainer/VBoxContainer" instance=ExtResource("2_k4lip")]
unique_name_in_owner = true
layout_mode = 2
text = "Continue"

[node name="QuitButton" parent="MarginContainer/PanelContainer/MarginContainer/VBoxContainer/VBoxContainer" instance=ExtResource("2_k4lip")]
unique_name_in_owner = true
layout_mode = 2
text = "Quit to Menu"
